src/objects/Brand__c.object
<CustomObject>
    <description>Brand</description>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <externalId>true</externalId>
        <label>EnterpriseID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ManufacturerEnterpriseID__c</fullName>
        <formula>Manufacturer__r.EnterpriseID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ManufacturerEnterpriseID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Manufacturer</description>
        <inlineHelpText>Manufacturer</inlineHelpText>
        <label>Manufacturer</label>
        <referenceTo>MDM_Manufacturer__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>